--- a/forked  Analyzing Star Wars Movie Scripts.Rmd
+++ b/forked  Analyzing Star Wars Movie Scripts.Rmd
@@ -27,11 +27,13 @@ library(wordcloud)
 library(wordcloud2)
 library(tidytext)
 library(reshape2)
+library(radarchart)
+library(RWeka)
 
 # Read the data
-ep4 <- read.table("SW_EpisodeIV.txt")
-ep5 <- read.table("SW_EpisodeV.txt")
-ep6 <- read.table("SW_EpisodeVI.txt")
+ep4 <- read.table("../input/SW_EpisodeIV.txt")
+ep5 <- read.table("../input/SW_EpisodeV.txt")
+ep6 <- read.table("../input/SW_EpisodeVI.txt")
 ```
 
 ******
@@ -53,9 +55,9 @@ cleanCorpus <- function(corpus){
   corpus.tmp <- tm_map(corpus, removePunctuation)
   corpus.tmp <- tm_map(corpus.tmp, stripWhitespace)
   corpus.tmp <- tm_map(corpus.tmp, content_transformer(tolower))
-  v_stopwords <- c(stopwords("english"), c("thats","weve","hes","theres","ive",
-                                           "will","can","cant","dont","youve",
-                                           "youre","youll","theyre","whats","didnt","us"))
+  v_stopwords <- c(stopwords("english"), c("thats","weve","hes","theres","ive","im",
+                                           "will","can","cant","dont","youve","us",
+                                           "youre","youll","theyre","whats","didnt"))
   corpus.tmp <- tm_map(corpus.tmp, removeWords, v_stopwords)
   corpus.tmp <- tm_map(corpus.tmp, removeNumbers)
   return(corpus.tmp)
@@ -72,7 +74,34 @@ frequentTerms <- function(text){
   s.cor <- Corpus(VectorSource(text))
   s.cor.cl <- cleanCorpus(s.cor)
   s.tdm <- TermDocumentMatrix(s.cor.cl)
-  s.tdm <- removeSparseTerms(s.tdm, 0.99)
+  s.tdm <- removeSparseTerms(s.tdm, 0.999)
+  m <- as.matrix(s.tdm)
+  word_freqs <- sort(rowSums(m), decreasing=TRUE)
+  dm <- data.frame(word=names(word_freqs), freq=word_freqs)
+  return(dm)
+  
+}
+```
+
+The next two functions extract tokens containing two words. 
+  
+```{r}
+# Define bigram tokenizer 
+tokenizer  <- function(x){
+  
+  NGramTokenizer(x, Weka_control(min=2, max=2))
+  
+}
+```
+
+```{r}
+# Most frequent bigrams 
+frequentBigrams <- function(text){
+  
+  s.cor <- VCorpus(VectorSource(text))
+  s.cor.cl <- cleanCorpus(s.cor)
+  s.tdm <- TermDocumentMatrix(s.cor.cl, control=list(tokenize=tokenizer))
+  s.tdm <- removeSparseTerms(s.tdm, 0.999)
   m <- as.matrix(s.tdm)
   word_freqs <- sort(rowSums(m), decreasing=TRUE)
   dm <- data.frame(word=names(word_freqs), freq=word_freqs)
@@ -105,11 +134,21 @@ ggplot(data=top.ep4.chars, aes(x=Var1, y=Freq)) +
 ```{r eval=FALSE}
 # Wordcloud for Episode IV
 wordcloud2(frequentTerms(ep4$dialogue), size=0.5,
-           figPath="../Star-Wars-Movie-Scripts/vader.png")
+           figPath="../input/wordcloud_masks/vader.png")
 ```
 
 <img src="https://i.imgur.com/TzUfUrQ.png">
 
+**NOTE**: I have had a lot of problems with the renderization of the wordclouds in Kaggle. In order to solve it, I have exported the images from RStudio and I have published them in [Imgur](https://imgur.com/), using the URLs in this kernel.     
+
+```{r}
+# Most frequent bigrams
+ep4.bigrams <- frequentBigrams(ep4$dialogue)[1:20,]
+ggplot(data=ep4.bigrams, aes(x=reorder(word, -freq), y=freq)) +  
+  geom_bar(stat="identity", fill="chocolate2", colour="black") +
+  theme(axis.text.x=element_text(angle=45, hjust=1)) +
+  labs(x="Bigram", y="Frequency")
+```
 
 ******
 # Episode V: The Empire Strikes Back
@@ -135,11 +174,19 @@ ggplot(data=top.ep5.chars, aes(x=Var1, y=Freq)) +
 ```{r eval=FALSE}
 # Wordcloud for Episode V
 wordcloud2(frequentTerms(ep5$dialogue), size=0.5,
-           figPath="../Star-Wars-Movie-Scripts/yoda.png")
+           figPath="../input/wordcloud_masks/yoda.png")
 ```
 
 <img src="https://i.imgur.com/KMKIPMk.png">
 
+```{r}
+# Most frequent bigrams
+ep5.bigrams <- frequentBigrams(ep5$dialogue)[1:20,]
+ggplot(data=ep5.bigrams, aes(x=reorder(word, -freq), y=freq)) +  
+  geom_bar(stat="identity", fill="chocolate2", colour="black") +
+  theme(axis.text.x=element_text(angle=45, hjust=1)) +
+  labs(x="Bigram", y="Frequency")
+```
 
 ******
 # Episode VI: Return of the Jedi
@@ -165,11 +212,19 @@ ggplot(data=top.ep6.chars, aes(x=Var1, y=Freq)) +
 ```{r eval=FALSE}
 # Wordcloud for Episode VI
 wordcloud2(frequentTerms(ep6$dialogue), size=0.5,
-           figPath="../Star-Wars-Movie-Scripts/r2d2.png")
+           figPath="../input/wordcloud_masks/r2d2.png")
 ```
 
 <img src="https://i.imgur.com/0ou5EPG.png">
 
+```{r}
+# Most frequent bigrams
+ep6.bigrams <- frequentBigrams(ep6$dialogue)[1:20,]
+ggplot(data=ep6.bigrams, aes(x=reorder(word, -freq), y=freq)) +  
+  geom_bar(stat="identity", fill="chocolate2", colour="black") +
+  theme(axis.text.x=element_text(angle=45, hjust=1)) +
+  labs(x="Bigram", y="Frequency")
+```
 
 ******
 # The Original Trilogy
@@ -188,10 +243,10 @@ length(trilogy$dialogue)
 length(levels(trilogy$character))
 
 # Top 20 characters with more dialogues 
-top.chars <- as.data.frame(sort(table(trilogy$character), decreasing=TRUE))[1:20,]
+top.trilogy.chars <- as.data.frame(sort(table(trilogy$character), decreasing=TRUE))[1:20,]
 
 # Visualization 
-ggplot(data=top.chars, aes(x=Var1, y=Freq)) +
+ggplot(data=top.trilogy.chars, aes(x=Var1, y=Freq)) +
   geom_bar(stat="identity", fill="#56B4E9", colour="black") +
   theme(axis.text.x=element_text(angle=45, hjust=1)) +
   labs(x="Character", y="Number of dialogues")
@@ -202,11 +257,19 @@ C-3PO with more dialogues than Leia and Darth Vader? Ugh...
 ```{r eval=FALSE}
 # Wordcloud for The Original Trilogy
 wordcloud2(frequentTerms(trilogy$dialogue), size=0.4,
-           figPath="../Star-Wars-Movie-Scripts/rebel alliance.png")
+           figPath="../input/wordcloud_masks/rebel alliance.png")
 ```
 
 <img src="https://i.imgur.com/e7NLonz.png">
 
+```{r}
+# Most frequent bigrams
+trilogy.bigrams <- frequentBigrams(trilogy$dialogue)[1:20,]
+ggplot(data=trilogy.bigrams, aes(x=reorder(word, -freq), y=freq)) +  
+  geom_bar(stat="identity", fill="chocolate2", colour="black") +
+  theme(axis.text.x=element_text(angle=45, hjust=1)) +
+  labs(x="Bigram", y="Frequency")
+```
 
 ******
 ## Sentiment analysis
@@ -228,7 +291,7 @@ First we are going to use the general-purpose lexicon `bing`, from [Bing Liu and
 tokens %>%
   inner_join(get_sentiments("bing")) %>%
   count(word, sentiment, sort=TRUE) %>%
-  acast(word ~ sentiment, value.var="n" , fill=0) %>%
+  acast(word ~ sentiment, value.var="n", fill=0) %>%
   comparison.cloud(colors=c("#F8766D", "#00BFC4"), max.words=100)
 ```
 
@@ -270,8 +333,8 @@ In the following visualizations we only consider the Top 10 characters with more
 ```{r message=FALSE}
 # Sentiment analysis for the Top 10 characters with more dialogues
 tokens %>%
-  filter(character %in% c("LUKE", "HAN", "THREEPIO", "LEIA", "VADER",
-                          "BEN", "LANDO", "YODA", "EMPEROR", "RED LEADER")) %>%
+  filter(character %in% c("LUKE","HAN","THREEPIO","LEIA","VADER",
+                          "BEN","LANDO","YODA","EMPEROR","RED LEADER")) %>%
   inner_join(get_sentiments("nrc")) %>%
   count(character, sentiment, sort=TRUE) %>%
   ggplot(aes(x=sentiment, y=n)) +
@@ -286,20 +349,20 @@ To calculate the most frequent words for each character, we are going to use a d
 ```{r}
 # Stopwords
 mystopwords <- data_frame(word=c(stopwords("english"), 
-                                 c("thats","weve","hes","theres","ive",
-                                   "will","can","cant","dont","youve",
-                                   "youre","youll","theyre","whats","didnt","us")))
+                                 c("thats","weve","hes","theres","ive","im",
+                                   "will","can","cant","dont","youve","us",
+                                   "youre","youll","theyre","whats","didnt")))
 
 # Tokens without stopwords
-tokens.top.chars <- trilogy %>%
+top.chars.tokens <- trilogy %>%
   mutate(dialogue=as.character(trilogy$dialogue)) %>%
-  filter(character %in% c("LUKE", "HAN", "THREEPIO", "LEIA", "VADER",
-                          "BEN", "LANDO", "YODA", "EMPEROR", "RED LEADER")) %>%
+  filter(character %in% c("LUKE","HAN","THREEPIO","LEIA","VADER",
+                          "BEN","LANDO","YODA","EMPEROR","RED LEADER")) %>%
   unnest_tokens(word, dialogue) %>%
   anti_join(mystopwords, by="word")
 
 # Most frequent words for each character
-tokens.top.chars %>%
+top.chars.tokens %>%
   count(character, word) %>%
   group_by(character) %>% 
   arrange(desc(n)) %>%
@@ -321,17 +384,21 @@ If the term appears in all documents, it is not likely to be insightful.
 
 ```{r}
 # Most relevant words for each character
-tokens.top.chars %>%
+top.chars.tokens %>%
   count(character, word) %>%
   bind_tf_idf(word, character, n) %>%
   group_by(character) %>% 
   arrange(desc(tf_idf)) %>%
   slice(1:10) %>%
-  ggplot(aes(x=reorder(word, tf_idf), y=tf_idf)) +
+  ungroup() %>%
+  mutate(word2=factor(paste(word, character, sep="__"), 
+                       levels=rev(paste(word, character, sep="__"))))%>%
+  ggplot(aes(x=word2, y=tf_idf)) +
   geom_col(aes(fill=character), show.legend=FALSE) +
   facet_wrap(~character, scales="free_y") +
   theme(axis.text.x=element_text(angle=45, hjust=1)) +
   labs(y="tf–idf", x="Sentiment") +
+  scale_x_discrete(labels=function(x) gsub("__.+$", "", x)) +
   coord_flip()
 ```
 
@@ -343,14 +410,12 @@ These words are, as measured by `tf–idf`, the most important to each character
 
 In this entry we have analyzed the Star Wars scripts from The Original Trilogy Episodes by performing a statistical text analysis, including: 
 
-* Most frequent words for each Episode (term-document matrix approach).
-* Sentiment analysis using the lexicons `bing` and `nrc`. 
+* Most frequent words and bigrams for each Episode (term-document matrix approach).
+* Sentiment analysis using the lexicons `bing` and `nrc`, considering the three Episodes.
 * Sentiment analysis and most frequent words by character (the tidy way).
 * Most relevant words by character using the statistic `tf–idf`.
 
 It has been a pleasure to make this post, I have learned a lot! Thank you for reading and if you like it, please upvote it.
-
-**NOTE**: I have had a lot of problems with the renderization of the wordclouds in Kaggle. In order to solve it, I have exported the images from RStudio and I have published them in [Imgur](https://imgur.com/), using the URLs in this kernel.     
 
 ******
 # References
@@ -369,3 +434,9 @@ doi: 10.21105/joss.00037 (URL: http://doi.org/10.21105/joss.00037), <URL: http:/
 
 Hadley Wickham (2007). Reshaping Data with the reshape Package. Journal of Statistical Software, 21(12), 1-20. URL
 http://www.jstatsoft.org/v21/i12/.
+
+Doug Ashton and Shane Porter (2016). radarchart: Radar Chart from 'Chart.js'. R package version 0.3.1. https://CRAN.R-project.org/package=radarchart
+
+Hornik K, Buchta C, Zeileis A (2009). “Open-Source Machine Learning: R
+Meets Weka.” _Computational Statistics_, *24*(2), 225-232. doi:
+10.1007/s00180-008-0119-7 (URL: http://doi.org/10.1007/s00180-008-0119-7)
