--- a/kernel.Rmd
+++ b/kernel.Rmd
@@ -28,6 +28,9 @@ output:
 If you like the kernel, please give me an upvote and thanks!
 
 
+# Preprocess{.tabset .tabset-fade .tabset-pills}
+
+
 ******
 ## Load Packages
 ******
@@ -37,7 +40,7 @@ If you like the kernel, please give me an upvote and thanks!
 if (!require("pacman")) install.packages("pacman")
 pacman::p_load(tidyverse, tm, plotly, highcharter, viridis, 
                wordcloud, wordcloud2, plotrix, tidytext,
-               reshape2, ggthemes)
+               reshape2, ggthemes, qdap)
 ```
 
 
@@ -58,7 +61,7 @@ rm(ep4, ep5, ep6)
 
 
 ******
-## Preprocess
+## Functions
 ******
 
 
@@ -98,11 +101,11 @@ clean_top_char <- function(dataset){
   
   for (i in 1:10){
     
-  name <- top_chars$value[i]
-  dialogue <- paste(dataset$dialogue[dataset$character == name], collapse = " ")
-  all_dialogue <- c(all_dialogue, dialogue)
-  namelist <- c(namelist, name)
-  
+    name <- top_chars$character[i]
+    dialogue <- paste(dataset$dialogue[dataset$character == name], collapse = " ")
+    all_dialogue <- c(all_dialogue, dialogue)
+    namelist <- c(namelist, name)
+    
   }
   
   
@@ -113,7 +116,7 @@ clean_top_char <- function(dataset){
     cleanCorpus() %>% 
     TermDocumentMatrix() %>%
     as.matrix()
-    
+  
   colnames(all_clean) <- namelist
   
   assign("all_clean",all_clean,.GlobalEnv)
@@ -125,7 +128,7 @@ clean_top_char <- function(dataset){
 
 
 ******
-## Top 20 Characters (Interactive List)
+# Top 20 Characters (Interactive List)
 ******
 
 
@@ -138,7 +141,7 @@ hchart(top_chars, type = 'treemap',hcaes(x = "character", value = 'n', color = '
 
 
 ******
-## Top 30 Words (Interactive List)
+# Top 30 Words (Interactive List)
 ******
 
 
@@ -159,7 +162,7 @@ combined$dialogue %>%
 
 
 ******
-## Commonality & Comparison
+# Commonality & Comparison
 ******
 
 
@@ -175,7 +178,34 @@ comparison.cloud(all_clean[,c("LUKE","THREEPIO")], colors = c("#F8766D", "#00BFC
 
 
 ******
-## Word Association Networks
+# Pyramid Plot
+******
+
+
+```{r  message=FALSE, warning=FALSE}
+common_words_25 <- all_clean %>%
+  as.data.frame() %>% 
+  rownames_to_column() %>% 
+  filter(LUKE>0, THREEPIO>0) %>% 
+  # select(LUKE, THREEPIO) %>% 
+  mutate(difference = abs(LUKE - THREEPIO)) %>% 
+  arrange(desc(difference)) %>%
+  head(25)
+
+
+
+
+# Create the pyramid plot
+pyramid.plot(common_words_25$LUKE, common_words_25$THREEPIO,
+             labels = common_words_25$rowname, gap = 8,
+             top.labels = c("LUKE", "Words", "THREEPIO"),
+             main = "Words in Common", laxlab = NULL, 
+             raxlab = NULL, unit = NULL)
+```
+
+
+******
+# Word Association Networks
 ******
 
 
