--- a/kernel.Rmd
+++ b/kernel.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Interac Sentiment StarWar"
+title: "Interactive Sentiment StarWar"
 author: "Owen Ouyang"
 date: '`r Sys.Date()`'
 output:
@@ -40,7 +40,7 @@ If you like the kernel, please give me an upvote and thanks!
 if (!require("pacman")) install.packages("pacman")
 pacman::p_load(tidyverse, tm, plotly, highcharter, viridis, 
                wordcloud, wordcloud2, plotrix, tidytext,
-               reshape2, ggthemes, qdap)
+               reshape2, ggthemes, qdap, igraph)
 ```
 
 
@@ -168,10 +168,26 @@ combined$dialogue %>%
 
 ```{r  message=FALSE, warning=FALSE}
 clean_top_char(combined)
+```
+
+## Commonality Cloud
 
 
+As we can see from the following wordcloud, these are the words that Luke and Threepio have in common.
+
+
+```{r  message=FALSE, warning=FALSE}
 commonality.cloud(all_clean[,c("LUKE","THREEPIO")], colors = "steelblue1", at.least = 2, max.words = 100)
+```
 
+
+## Comparison Cloud
+
+
+In the comparison cloud, the lower one is for Threepio and upper one is for Luke. 
+
+
+```{r  message=FALSE, warning=FALSE}
 comparison.cloud(all_clean[,c("LUKE","THREEPIO")], colors = c("#F8766D", "#00BFC4"), max.words=50)
 
 ```
@@ -180,6 +196,10 @@ comparison.cloud(all_clean[,c("LUKE","THREEPIO")], colors = c("#F8766D", "#00BFC
 ******
 # Pyramid Plot (LUKE vs Threepio)
 ******
+
+
+Then lets have a look what words that Luke and Threepio have in common. By analyzing the frequency that they are using the words, we can have a better understanding the character. For example, Threepio says much more "afraid" than Luke. 
+It shows that Threepio is less confident.
 
 
 ```{r  message=FALSE, warning=FALSE}
@@ -197,7 +217,7 @@ common_words_25 <- common_words%>%
 
 # Create the pyramid plot
 pyramid.plot(common_words_25$LUKE, common_words_25$THREEPIO,
-             labels = common_words_25$rowname, gap = 8,
+             labels = common_words_25$rowname, gap = 20,
              top.labels = c("LUKE", "Words", "THREEPIO"),
              main = "Words in Common", laxlab = NULL, 
              raxlab = NULL, unit = NULL)
@@ -236,8 +256,11 @@ all_clean %>%
 ```
 
 
-# LUKE Different Emotions Wordcloud
+# Different Emotions Wordcloud
 ******
+
+
+**LUKE**
 
 
 ```{r  message=FALSE, warning=FALSE}
@@ -250,7 +273,15 @@ all_clean %>%
   spread(sentiment, LUKE, fill = 0) %>% 
   column_to_rownames(var = 'word') %>% 
   comparison.cloud(colors = c("#F8766D", "#00BFC4", "firebrick", "steelblue"), max.words=50)
+```
 
+
+**VADER**
+
+
+For Vader, he has much more negative words than the positive ones. From examing the graph below, we can see negative words such as "dark", "Destroy", "Attack" and "Betray" and the positive words such as "Master" .
+
+```{r  message=FALSE, warning=FALSE}
 all_clean %>%
   as.data.frame() %>% 
   rownames_to_column(var = 'word') %>%
@@ -258,7 +289,7 @@ all_clean %>%
   select(word, VADER, sentiment) %>% 
   spread(sentiment, VADER, fill = 0) %>% 
   column_to_rownames(var = 'word') %>% 
-  comparison.cloud(colors = c("#F8766D", "#00BFC4"), max.words=50)
+  comparison.cloud(colors = c("#F8766D", "#00BFC4"), max.words=150)
 ```
 
 
@@ -277,7 +308,7 @@ senti_LUKE_THREE <- all_clean %>%
             sum_threepio = sum(THREEPIO))
 
 pyramid.plot(senti_LUKE_THREE$sum_luke, senti_LUKE_THREE$sum_threepio,
-             labels = senti_LUKE_THREE$sentiment, gap = 30,
+             labels = senti_LUKE_THREE$sentiment, gap = 40,
              top.labels = c("LUKE", "Sentiment", "THREEPIO"),
              main = "Sentiment Comparison", laxlab = NULL, 
              raxlab = NULL, unit = NULL)
@@ -319,3 +350,52 @@ word_associate(combined$dialogue[combined$character == 'VADER'], match.string = 
 title(main = "Vader Rebel Comment")
 
 ```
+
+
+
+**Relation Network**
+
+
+```{r  message=FALSE, warning=FALSE}
+
+char <- colnames(all_clean) %>% tolower()
+
+
+all_clean_dt <- all_clean %>% 
+  as.data.frame() %>% 
+  select(-10)
+
+colnames(all_clean_dt) <- colnames(all_clean_dt) %>% tolower()
+
+network <- all_clean_dt[rownames(all_clean) %in% char,]
+
+network_matrix <- network %>% select(rownames(network)) %>% as.matrix()
+
+network=graph_from_adjacency_matrix(network_matrix, mode='undirected', diag=F)
+
+# plot it
+plot(network,                
+    # === vertex
+    vertex.color = rgb(0.8,0.4,0.3,0.8),          # Node color
+    vertex.frame.color = "white",                 # Node border color
+    vertex.shape="circle",                        # One of “none”, “circle”, “square”, “csquare”, “rectangle” “crectangle”, “vrectangle”, “pie”, “raster”, or “sphere”
+    vertex.size=54,                               # Size of the node (default is 15)
+    vertex.size2=NA,                              # The second size of the node (e.g. for a rectangle)
+   # Character vector used to label the nodes
+    vertex.label.color="white",
+    vertex.label.family="Times",                   # Font family of the label (e.g.“Times”, “Helvetica”)
+    vertex.label.font=c(1,2,3,4),                  # Font: 1 plain, 2 bold, 3, italic, 4 bold italic, 5 symbol
+    vertex.label.cex=c(0.7,1,1.3),                 # Font size (multiplication factor, device-dependent)
+    vertex.label.dist=0,                           # Distance between the label and the vertex
+    vertex.label.degree=0,                         # The position of the label in relation to the vertex (use pi)ze2=NA)                               # The second size of the node (e.g. for a rectangle)
+    layout=layout.circle, main="Star Wars Relationship Network")                       
+
+
+```
+
+
+******
+# Conclusion
+******
+
+To be continued! If you like the kernel, don't forget to upvote and thanks!
